--- a/package.json
+++ b/package.json
@@ -18,15 +18,29 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d src/databases/dataSource.ts",
+    "typeorm:run-migrations-dev": "npm run build && npm run typeorm migration:run -- -d src/databases/dataSource.ts",
+    "typeorm:generate-migration": "npm run typeorm -- -d src/databases/dataSource.ts migration:generate ./src/databases/migrations/%npm_config_name%",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/databases/migrations/%npm_config_name%",
+    "typeorm:revert-migration": "npm run typeorm -- -d src/databases/dataSource.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
